--- a/.github/workflows/publish-docker-images.yml
+++ b/.github/workflows/publish-docker-images.yml
@@ -31,6 +31,14 @@ jobs:
           echo ::set-output name=version::${VERSION}
           echo ::set-output name=tags::${TAGS}
           echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+      - name: Setup Basespace configuration
+        uses: nowactions/envsubst@v1
+        with:
+          input: ./default.cfg.template
+          output: ./default.cfg
+        env:
+          BASESPACE_API_SERVER: ${{secrets.BASESPACE_API_SERVER}}
+          BASESPACE_ACCESS_TOKEN: ${{secrets.BASESPACE_ACCESS_TOKEN}}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Configure AWS credentials
