--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   server:
     build: .
     image: labflow/swabseq-analysis-server:latest
-    command: "python -m flask run --host=0.0.0.0 --port=5000"
+    command: "python3 -m flask run --host=0.0.0.0 --port=5000"
     environment:
       - FLASK_ENV=development
       - PORT=5000
