--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,8 +18,28 @@ services:
       - "AUTH0_AUTHORIZATION_URL=${AUTH0_AUTHORIZATION_URL}"
       - "AUTH0_CLIENT_ID=${AUTH0_CLIENT_ID}"
       - "AUTH0_TOKEN_URL=${AUTH0_TOKEN_URL}"
+      - "CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:6379"
+      - "CELERY_RESULT_BACKEND=redis://:${REDIS_PASSWORD}@redis:6379"
     ports:
       - 5000:5000
     volumes:
       - ./.basespace:/root/.basespace
       - ./:/app
+  worker:
+    build:
+      context: .
+      args:
+        SERVER_VERSION: local+devcontainer
+    image: labflow/swabseq-analysis-server:latest
+    command: "python3 -m celery -A analysis worker"
+    environment:
+      - "CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:6379"
+      - "CELERY_RESULT_BACKEND=redis://:${REDIS_PASSWORD}@redis:6379"
+    volumes:
+      - ./.basespace:/root/.basespace
+      - ./:/app
+  redis:
+    image: redis:6-alpine
+    command: redis-server --requirepass ${REDIS_PASSWORD}
+    ports:
+      - 6379:6379
