--- a/example.env
+++ b/example.env
@@ -1,5 +1,7 @@
 SERVER_NAME=localhost:5000
 
+REDIS_PASSWORD=my-redis-password
+
 AUTH_PROVIDER=auth0
 AUTH0_DOMAIN=a-domain.us.auth0.com
 AUTH0_CLIENT_ID=some-auth0-client-id
