Generalize server component to run any script.

--- a/Pipfile
+++ b/Pipfile
@@ -8,9 +8,12 @@ celery = "*"
 flask = "*"
 flask-cors = "*"
 flask-restx = "*"
+jsonpath-ng = "*"
 pandas = "*"
 python-jose = "*"
+pydantic = "*"
 redis = "*"
+typing_extensions = "*"
 Werkzeug = "*"
 gunicorn = "*"
 
