Switches to using generic script-runner package.

--- a/example.env
+++ b/example.env
@@ -2,12 +2,13 @@ SERVER_NAME=localhost:5000
 
 REDIS_PASSWORD=my-redis-password
 
-AUTH_PROVIDER=auth0
-AUTH0_DOMAIN=a-domain.us.auth0.com
-AUTH0_CLIENT_ID=some-auth0-client-id
+AUTH_PROVIDER=none
+AUTH0_DOMAIN=
+AUTH0_CLIENT_ID=
 
-AUTH0_API_AUTHORITY=https://a-domain.us.auth0.com/
-AUTH0_API_AUDIENCE=https://an.audience.domain/
+AUTH0_API_AUTHORITY=
+AUTH0_API_AUDIENCE=
 
-AUTH0_AUTHORIZATION_URL=https://a-domain.us.auth0.com/authorize
-AUTH0_TOKEN_URL=https://a-domain.us.auth0.com/oauth/token
+AUTH0_AUTHORIZATION_URL=
+AUTH0_TOKEN_URL=
+
