--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
 version: "3.7"
 services:
   server:
-    image: labflow/swabseq-analysis-server:latest
-    # image: labflow/swabseq-analysis-server-example:latest
+    # image: labflow/swabseq-analysis-server:latest
+    image: labflow/swabseq-analysis-server-example:latest
     build:
-      # dockerfile: Dockerfile.example
+      dockerfile: Dockerfile.example
       context: .
       args:
         SERVER_VERSION: local+devcontainer
@@ -28,16 +28,18 @@ services:
       - ./.basespace:/root/.basespace
       - ./:/app
   worker:
+    # image: labflow/swabseq-analysis-server:latest
+    image: labflow/swabseq-analysis-server-example:latest
     build:
       context: .
+      dockerfile: Dockerfile.example
       args:
         SERVER_VERSION: local+devcontainer
-    image: labflow/swabseq-analysis-server:latest
     command: "python3 -m celery -A analysis worker"
     environment:
       - "CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:6379"
       - "CELERY_RESULT_BACKEND=redis://:${REDIS_PASSWORD}@redis:6379"
-      # - "COMMAND_RUNDIR_BASE=/app/examples"
+      - "COMMAND_RUNDIR_BASE=/base-rundir"
     volumes:
       - ./.basespace:/root/.basespace
       - ./:/app
