Fixes dockerfile untar command.

--- a/Dockerfile.example
+++ b/Dockerfile.example
@@ -82,9 +82,10 @@ RUN chmod +x /entrypoint.sh
 
 COPY ./ .
 
-RUN cd /tmp \
-    && wget -qO- https://swabseq-analysis-examples.s3-us-west-1.amazonaws.com/bcls/bcls-H3FY3K.tar.gz | tar xvz - \
-    && mv bcls /base-rundir
+RUN echo "${EXAMPLE_BCLS_URL}"
+RUN wget -qO- https://swabseq-analysis-examples.s3-us-west-1.amazonaws.com/bcls/bcls-H3FY3K.tar.gz \
+    | tar xvz -C /tmp \
+    && mv /tmp/bcls /base-rundir
 
 ENV PYTHONPATH="${RBASE}:${PYTHONPATH}"
 ENV FLASK_APP=/app/main.py
