Re-upload bcl files.

--- a/Dockerfile.example
+++ b/Dockerfile.example
@@ -83,9 +83,8 @@ RUN chmod +x /entrypoint.sh
 COPY ./ .
 
 RUN echo "${EXAMPLE_BCLS_URL}"
-RUN wget -qO- https://swabseq-analysis-examples.s3-us-west-1.amazonaws.com/bcls/bcls-H3FY3K.tar.gz \
-    | tar xvz -C /tmp \
-    && mv /tmp/bcls /base-rundir
+RUN wget -qO- https://swabseq-analysis-examples.s3-us-west-1.amazonaws.com/bcls/H3FY3K.tar.gz \
+    | tar xvz -C /base-rundir
 
 ENV PYTHONPATH="${RBASE}:${PYTHONPATH}"
 ENV FLASK_APP=/app/main.py
