Switches to using script-runner repo.

--- a/Dockerfile.example
+++ b/Dockerfile.example
@@ -69,12 +69,7 @@ RUN R --slave -e "BiocManager::install(c('savR', 'edgeR', 'qvalue', 'ShortRead',
 # Python Env
 WORKDIR /app
 
-RUN pip3 install pipenv
-
-COPY Pipfile Pipfile
-COPY Pipfile.lock Pipfile.lock
-RUN pipenv lock --dev --requirements > requirements.txt
-RUN pip3 install -r requirements.txt
+RUN pip3 install git+https://github.com/lab-grid/script-runner.git@e7fe853a4e553f3a3c889d2724de40b232b08081
 
 COPY ./entrypoint.sh /entrypoint.sh
 RUN dos2unix /entrypoint.sh
