--- a/Dockerfile.example
+++ b/Dockerfile.example
@@ -69,7 +69,7 @@ RUN R --slave -e "BiocManager::install(c('savR', 'edgeR', 'qvalue', 'ShortRead',
 # Python Env
 WORKDIR /app
 
-RUN pip3 install git+https://github.com/lab-grid/script-runner.git@e7fe853a4e553f3a3c889d2724de40b232b08081
+RUN pip3 install git+https://github.com/lab-grid/script-runner.git@936ddc37a52966e905aa6a099c02bc06e55984f6
 
 COPY ./entrypoint.sh /entrypoint.sh
 RUN dos2unix /entrypoint.sh
@@ -82,7 +82,7 @@ RUN wget -qO- https://swabseq-analysis-examples.s3-us-west-1.amazonaws.com/bcls/
     | tar xvz -C /base-rundir
 
 ENV PYTHONPATH="${RBASE}:${PYTHONPATH}"
-ENV FLASK_APP=/app/main.py
+ENV FLASK_APP=script_runner.main:app
 ENV SERVER_VERSION=$SERVER_VERSION
 
 ENTRYPOINT [ "/entrypoint.sh" ]
