--- a/Dockerfile.example
+++ b/Dockerfile.example
@@ -69,7 +69,9 @@ RUN R --slave -e "BiocManager::install(c('savR', 'edgeR', 'qvalue', 'ShortRead',
 # Python Env
 WORKDIR /app
 
-RUN pip3 install git+https://github.com/lab-grid/script-runner.git@936ddc37a52966e905aa6a099c02bc06e55984f6
+RUN pip3 install \
+    pandas \
+    git+https://github.com/lab-grid/script-runner.git@3cdb80fa788ce5fdb139e90c4025b11e7f70c2f0
 
 COPY ./entrypoint.sh /entrypoint.sh
 RUN dos2unix /entrypoint.sh
